# Kuka_moveIt2

./: .gitignore  README.md  frames_2025-10-18_00.46.03.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kuka_waam_control/share/kuka_waam_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_waam_control/share/kuka_waam_control/config/: io_mapping.yaml  waam_controllers.yaml  welding_params.yaml
install/kuka_waam_control/share/kuka_waam_control/launch/: execute_waam_job.launch.py  waam_gazebo.launch.py  waam_planning.launch.py  waam_real.launch.py
kuka_agilus_support/urdf/: kr6_r900_sixx_macro.xacro  kr_agilus_ros2_control_macro.xacro
kuka_waam_control/: package.xml  setup.cfg  setup.py
kuka_waam_control/config/: welding_params.yaml
kuka_waam_control/kuka_waam_control/: gcode_transpiler.py  krl_executor_node.py  part.gcode  waam_state_machine.py
kuka_waam_control/launch/: execute_waam_job.launch.py  waam_gazebo.launch.py  waam_planning.launch.py  waam_real.launch.py
kuka_waam_description/: CMakeLists.txt  package.xml
kuka_waam_description/config/: default.rviz  initial_positions.yaml  ros2_controllers.yaml  view_robot.rviz
kuka_waam_description/launch/: display.launch.py
kuka_waam_description/urdf/: kr6_r900_waam.urdf.xacro  welding_torch.urdf.xacro
kuka_waam_gazebo/: CMakeLists.txt
kuka_waam_gazebo/launch/: spawn_waam_world.launch.py
kuka_waam_gazebo/plugins/: CmakeLists.txt  welding_torch_plugin.cpp
kuka_waam_gazebo/worlds/: waam_cell.sdf
kuka_waam_moveit_config/: CMakeLists.txt  package.xml
kuka_waam_moveit_config/config/: joint_limits.yaml  kinematics.yaml  kr6_waam.srdf  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml
kuka_waam_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
kuka_waam_msgs/: CMakeLists.txt  package.xml
log/: latest_build
(+485 files in other folders)
